--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 	
 					<!-- Logo Box -->
                 	<div class="pull-left logo-box">
-                    	<div class="logo"><a href="index.html"><img src="images/logo.png" alt="" title=""></a></div>
+                    	<div class="logo"><a href="index.html"><img src="/images/logo.png" alt="" title=""></a></div>
                     </div>
                    	
 					<!-- Nav Outer -->
